dctrl-tools (2.8.1) UNRELEASED; urgency=low

  * tbl-dctrl.c, sort-dctrl: Remove the useless (and broken) options
    -q and --silent
    Closes: #326662 (tbl-dctrl --help output lies about options)
    Reported by Frank Lichtenheld <djpig@debian.org>.

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 25 Feb 2006 20:49:17 +0200

dctrl-tools (2.8) experimental; urgency=low

  * Merge 2.6.7 (no po/ merge).
  * New program tbl-dctrl.
    Closes: #191144 (Would be great if it could print desired field values
                     all in one line, per package)
    [Reported by Carlos Sousa]
  * tbl-dctrl.1: New manpage.
  * Give FSAF objects knowledge of the file name, so that we know which
    file each paragraph came from.
  * para_bundle.c (bundle_slurp): The correct error sentinel for file
    descriptors is -1, not 0.

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Thu, 21 Jul 2005 21:32:42 +0300

dctrl-tools (2.7) experimental; urgency=low

  * Merge 2.6.0.
  * Merge 2.6.1.
  * Merge 2.6.2.
  * Merge 2.6.3.
  * Merge 2.6.4.
  * Merge 2.6.5.
  * Merge 2.6.6.
  * Rename source and binary package to dctrl-tools.
  * debian/{rules,control}: Generate an empty transition package for
    grep-dctrl.
  * Makefile, debian/rules, sort-dctrl.c: New program sort-dctrl.
  * Makefile: Rearrange build system so that most objects are
    put in a static library, which the binaries are linked against.
  * Refactor a lot to allow several programs share the backbone code.
  * New program sort-dctrl.
  * New manual page sort-dctrl(1).

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Thu,  9 Jun 2005 00:40:13 +0300

grep-dctrl (2.6.7) unstable; urgency=low

  * fr.po: Update by Nicolas Bertolissio.
    Closes: #314893 (French translation update of gettext debconf template)
    (Nothing to do with debconf regardless of the bug title)
  * msg.h: Fix progname type.
    Closes: #314601 (FTBFS (amd64/gcc-4.0): conflicting types for 'progname')
    [Reported by Andreas Jochens]