@@ -27,6 +27,7 @@
 #include "sorter.h"
 
 #define OPT_SILENT 256
+#define OPT_MMAP 257
 
 const char * argp_program_version = "sort-dctrl (dctrl-tools) " VERSION;
 const char * argp_program_bug_address = MAINTAINER;
@@ -35,6 +36,7 @@ static struct argp_option options[] = {
 	{ "copying",	       'C', 0,		    0, N_("Print out the copyright license.") },
 	{ "errorlevel",	       'l', N_("LEVEL"),    0, N_("Set debugging level to LEVEL.") },
 	{ "key-spec",          'k', N_("KEYSPEC"),  0, N_("Specify sort keys.") },
+	{ "mmap",               OPT_MMAP, 0,        0, N_("Attempt mmapping input files") },
 	{ 0 }
 };
 
@@ -100,6 +102,10 @@ static error_t parse_opt (int key, char * arg, struct argp_state * state)
 		set_loglevel(ll);
 		debug_message("parse_opt: l", 0);
 	}
+		break;
+	case OPT_MMAP:
+		debug_message("parse_opt: mmap", 0);
+		fsaf_mmap = 1;
 		break;
 	case ARGP_KEY_ARG:
 		debug_message("parse_opt: argument", 0);
